Modificado titulo del proyecto

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "primevue-quickstart",
-  "version": "0.1.0",
+  "name": "SPARQL Novel's query",
+  "version": "1.0.0",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
